--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="my_tasks">My Tasks</string>
     <string name="add_task">Add Task</string>
     <string name="edit_task">Edit Task</string>
+    <string name="task_update_successfully">Task Update Successfully</string>
 </resources>
